# ai_video_app

./: .gitignore  .mvn-settings.xml  AGENTS.md  README.md  api.http  application.properties.example  docker-compose.yml  pom.xml  start-backend.ps1
animegen-ai/: pom.xml
animegen-ai/src/main/java/com/animegen/ai/: AiProvider.java  AiProviderProperties.java  HttpAiProvider.java  MockAiProvider.java
animegen-android/: .gitignore  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
animegen-android/app/: build.gradle.kts  proguard-rules.pro
animegen-android/app/src/main/: AndroidManifest.xml  baseline-prof.txt
animegen-android/app/src/main/assets/: MODEL_README.txt  tag_suggest.labels.txt
animegen-android/app/src/main/cpp/: CMakeLists.txt  animegen_llama_jni.cpp
animegen-android/app/src/main/res/drawable/: bg_native_row.xml  bg_native_status_badge.xml
animegen-android/app/src/main/res/layout/: activity_native_work_center.xml  item_native_work_row.xml
animegen-android/app/src/main/res/values/: ic_launcher_background.xml  strings.xml  themes.xml
animegen-android/gradle/wrapper/: gradle-wrapper.properties
animegen-api/: pom.xml
animegen-api/src/main/java/com/animegen/api/: AnimeGenApiApplication.java
animegen-api/src/main/resources/: application-example.properties  application.properties  application.yml
animegen-common/: pom.xml
animegen-dao/: pom.xml
animegen-service/: pom.xml
animegen-worker/: pom.xml
animegen-worker/src/main/resources/: application-example.properties  application.properties  application.yml
docs/: hybrid-ui-compose-view.md  prd.md  prdv2.md  video-mall-implementation-spec.md  video-mall-module-design.md  video-mall-repo-mapping.md
scripts/: push-gguf-to-device.ps1
skills/ai-inference-adapters/: SKILL.md
skills/android-kotlin-compose/: SKILL.md
skills/docker-nginx-deploy/: SKILL.md
skills/java-ssm-backend/: SKILL.md
skills/mysql-schema-ddl/: SKILL.md
skills/redis-task-queue-cache/: SKILL.md
skills/s3-minio-oss-storage/: SKILL.md
sql/: mock-data.sql  patch-ranking.sql  schema.sql  video_mall_schema.sql
(+159 files in other folders)
